@@ -13,6 +13,9 @@
 				<a href="#ReleaseNotesforSirius">Release Notes for Sirius</a>
 				<ol style="list-style: disc;">
 					<li>
+						<a href="#sirius6.2.3">Changes in Sirius 6.2.3</a>
+					</li>
+					<li>
 						<a href="#sirius6.2.2">Changes in Sirius 6.2.2</a>
 					</li>
 					<li>
@@ -115,6 +118,8 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
+		<h2 id="sirius6.2.3">Changes in Sirius 6.2.3</h2>
+		<p>There are no user-visible changes in Sirius 6.2.3 compared to 6.2.2. The only change is a bugfix in the VSM editor for [a regression](https://bugs.eclipse.org/bugs/show_bug.cgi?id=549918) introduced in 6.2.0. </p>
 		<h2 id="sirius6.2.2">Changes in Sirius 6.2.2</h2>
 		<p>There are no user-visible changes in Sirius 6.2.2 compared to 6.2.1. The only changes are internal and related either to the build process or to the automated tests.</p>
 		<h2 id="sirius6.2.1">Changes in Sirius 6.2.1</h2>
